--- a/less/style_main.less
+++ b/less/style_main.less
@@ -751,106 +751,138 @@ body {
                            width: 60%;
                            height: 100%;
                            float: right;
-                           div.main_circle{
+                           position: relative;
+                           div.line{
+                            //    width: 135px;
+                                width: 0px;
+                               height: 20px;
                                position: absolute;
-                               width: 210px;
-                               height: 210px;
-                               background-color: @mainColor;
-                               margin: 0 auto;
-                               margin-top: 10px;
-                               border-radius: 100%;
-
-                               div.half_circle{
-                                   width: 50%;
-                                   height: 100%;
-                                //    background-color: #f0f0f0;
-
-                                   background-color: @mainColor;
-
-                                   opacity: 0.0;
-                                   float: left;
-                               }
-                               .main_half_left{
-                                   border-radius: 210px 0 0 210px;
-
-                               }
-                               .main_half_right{
-                                   position: relative;
-                                   z-index: 21;
-                                border-radius: 0px 210px 210px 0px;
-                                transform-origin: left center;
-                                transform: rotate(30deg);
-                                background: @mainColor;
-
-                            }
+                               z-index: 100;
+                               top: 10px;
+                               right: 15px;
+                               background-image: url(../img/ani_img/page4-section1-line.png);
+                               .backgroundOption;
+                               background-size: cover;
+                               background-position: right;
+                               text-align: right;
                            }
-                           div.hide_circle{
-                            position: absolute;
-                            width: 210px;
-                            height: 210px;
-                            margin: 0 auto;
-                            margin-top: 10px;
-                            border-radius: 100%;
-
-                            div.half_circle{
+                           p.line_text{
+                               position: absolute;;
+                               right: 15px;
+                                transform: translateY(-18px);
+                            opacity: 0.0;
+                        }
+                           div.pie-chart1{
+                            margin-top: 15px;
+                            margin-bottom: 15px;
+                            display:inline-block;
+                            width: 220px;
+                            height:220px;
+                            position: relative;
+                            margin-left: 40px;
+                            div{
                                 width: 50%;
                                 height: 100%;
                                 float: left;
                             }
-                            .hide_half_left{
+                            div.pie_half1{
                                 position: relative;
-                                background: #f0f0f0;
-                                border-radius: 210px 0 0 210px;
-                                z-index: 20;
-                                transform-origin: right center;
-                                // animation-name: rotateData;
-                                animation-duration: .6s;
-                                 animation-timing-function: ease-in;
-                                -webkit-animation-fill-mode: forwards;
-                                animation-fill-mode: forwards;
-                                // display: none;
+                                background-image: url(../img/ani_img/page4-section1.png);
+                                .backgroundOption;
+                                background-position: left;
+                                opacity: 0.0;
+                                z-index: 75;
 
+                                div{
+                                    position: relative;
+                                    width: 104%;
+                                    height: 104%;
+                                    border-radius: 150px 0px 0px 150px;
+                                    background-color: white;
+                                    top: -2px;
+                                    left: -1px;
+                                    transform-origin: right center;
+                                    z-index: 80;
+                                    // animation: rotateBox 1s;
+                                    animation-duration: .6s;
+                                    animation-timing-function: ease-out;
+                                    -webkit-animation-fill-mode: forwards;
+                                    animation-fill-mode: forwards;
 
+                                }
+                            }
+                            div.pie_half2{
+                                position: relative;
+                                z-index: 80;
+                                background-image: url(../img/ani_img/page4-section1.png);
+                                .backgroundOption;
+                                background-position: right;
+                                div{
+                                    position: relative;
+                                    z-index: 75;
+                                    width: 104%;
+                                    height: 104%;
+                                    border-radius: 0px 150px 150px 0px;
+                                    background-color: white;
+                                    transform-origin: left center;
+                                    // animation-name: rotateBox;
+                                    animation-duration: .6s;
+                                    animation-timing-function: ease-in;
+                                    -webkit-animation-fill-mode: forwards;
+                                    animation-fill-mode: forwards;
+                                    // transform: rotate(180deg);
+                                }
+                            }
+                            
+                            @keyframes rotateBox {
+                                0%{
+
+                                }
+                                80%{
+
+                                }
+                                100%{
+
+                                    transform: rotate(180deg);
+                                }
                                 
                             }
-                            .hide_half_right{
-                             border-radius: 0px 210px 210px 0px;
-                             position: relative;
-                             z-index: 21;
-                             transform-origin: left center;
-                             background: #f0f0f0;
-                            //  display: none;
-                            //  animation-name: rotateData;
-                             animation-duration: .6s;
-                             animation-timing-function: ease-out;
-                             -webkit-animation-fill-mode: forwards;
-                             animation-fill-mode: forwards;
-                            //  transform: rotate(30deg);
-                                    ///여기부터 ㅠㅠㅠ
-                                    ///여기부터 ㅠㅠㅠ
-                                    ///여기부터 ㅠㅠㅠ
-                                    ///여기부터 ㅠㅠㅠ
-                                    ///여기부터 ㅠㅠㅠ
-                                    ///여기부터 ㅠㅠㅠ
-                                    ///여기부터 ㅠㅠㅠ
-                                    ///여기부터 ㅠㅠㅠ
-                             // transform: rotate(180deg);
-                         }
+                            div.center{
+                                width: 130px;
+                                height: 130px;
+                                background: white;
+                                // background-image: url(../img/ani_img/page2-section1_text.png);
+                                .backgroundOption;
+                                background-size: 70%;
+                                position: absolute;
+                                border-radius: 140px;
+                                z-index: 90;
+                                left: 50%;
+                                top: 50%;
+                                transform: translate(-50%,-50%);
+                                opacity: 1.0;
+                                -webkit-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+                                -moz-box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+                                box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+                                text-align: center;
+                                h3{
+                                    padding-top: 30px;
+                                    box-sizing: border-box;
+                                    font-size: 1.313rem;
+                                     color: #ea5735;
+                                     opacity: 0.0;
 
+                                }
+                                h2{
+                                 font-size: 2.500rem;   
+                                 color: #ea5735;
+                                 opacity: 0.0;
+
+
+                                }
+                            }
                         }
-                
                        }
-                       @keyframes rotateData {
-                           0%{
-
-                           }
-                           100%{
-                             transform: rotate(180deg);
-                           }
-                           
-                       }
-                      
-                
                
                     }
                 }
@@ -863,26 +895,203 @@ body {
         section.section1.page2{
             background-image: url(../img/sub_page/page2-section1_bg.jpg);
         }
+        section.section2{
+            div.wrap{
+                max-width: 1200px;
+                margin: 0 auto;
+                height: 100%;
+                padding-top: 100px;
+                box-sizing: border-box;
+                div.left_tab{
+                    width: 50%;
+                    height: 100%;
+                    float: left;
+                    h2{
+                        font-size: 2.5rem;
+                        font-weight: bold;
+                        color: #222222;
+                        letter-spacing: -1.5px;
+                        span{
+                            font-size: 1.875rem;
+                            font-weight: normal;
+                            color: #222222;
+                            letter-spacing: -1.5px;
+                        }
+                    }
+                    p{
+                        margin-top: 35px;
+                        font-size: 1.125rem;
+                        color: #444444;
+                        line-height: 1.5rem;
+                        letter-spacing: -1.5px;
+                    }
+
+                }
+                div.right_tab{
+                    width: 50%;
+                    height: 100%;
+                    float: left;
+                    div.animation_tab_page1{
+                        width: 100%;
+                        height: 190px;
+                        position: relative;
+                        left: -10%;
+                        top: 70px;
+                        p{
+                            text-align: center;
+                            margin-bottom: 10px;
+                        }
+                        
+                        div.animation_area{
+                            width: 100%;
+                            height: 120px;
+                            margin-top: 20px;
+                            border-left: 1px solid #777777;
+                            border-right: 1px solid #777777;
+                            box-sizing: border-box;
+                            div.center_line{
+
+                                width: 1px;
+                                height: 120px;
+                                background: #777777;
+                                z-index: 10;
+                                position: absolute;
+                                left: 35%;;
+                            }
+                            div.stick{
+                                height: 35px;
+                            }
+                            div.stick_1{
+                                width: 100%;
+                                background-image: url(../img/ani_img/page1-section2-in1.png);
+                                .backgroundOption;
+                                background-size: contain;
+
+                            }
+                            div.stick_2{
+                                width: 35%;
+                                background-image: url(../img/ani_img/page1-section2-in2.png);
+                                .backgroundOption;
+                                background-position: left;
+                                background-size: contain;
+                                position: relative;
+                                top: -8px;
+                            }
+                            div.text_area{
+                                line-height: 30px;
+
+                                span{
+                                    display: inline-block;
+                                }
+                                span.text-box{
+                                    width: 90px;
+                                    height: 30px;
+                                    background:@mainColor;
+                                    text-align: center;
+                                    border-radius: 30px;
+                                    color: white;
+                                    font-weight: bold;
+                                    font-size: 0.875rem;
+                                     ///////////여기부터
+                                           ///////////여기부터
+                                           ///////////여기부터
+                                           ///////////여기부터
+                                           ///////////여기부터
+                                           ///////////여기부터
+                                           ///////////여기부터
+
+                                }
+                            }
+
+
+                        }
+                    }
+                    
+                }
+            }
+            div.page3{
+                h2{
+                    text-align: center;
+                    font-size: 2.5rem;
+                    color: #222222;
+                    letter-spacing: -1.5px;
+                    font-weight: bold;
+                    margin-bottom: 30px;
+                }
+                p{
+                    text-align: center;
+                    margin-bottom: 5px;
+                }
+            }
+            div.page4{
+                h4{
+                    font-size: 1.875rem;
+                    font-weight: normal;
+                    letter-spacing: -2.5px;
+                    margin-bottom: 10px;
+                    color: #222222;
+
+                }
+                h3{
+                    font-size: 2.5rem;
+                    font-weight: bold;
+                    letter-spacing: -2px;
+                    line-height: 2.8rem;
+                    color: #222222;
+                    span{
+                        color: @mainColor;
+                    }
+                }
+            }
+        }
 
     }
     main.page1{
         section.top_banner{
             background-image: url(../img/sub_page/page1-banner1.jpg);
         }
+        section.section2{
+            height: 520px;
+            background-image: url(../img/sub_page/page1-section2_bg.jpg);
+            .backgroundOption;
+            background-position: bottom;
+            // background-size: contain;
+
+
+        }
+     
     }
     main.page2{
         section.top_banner{
             background-image: url(../img/sub_page/page2-banner1.jpg);
+        }
+        section.section2{
+            height: 600px;
+            background-image: url(../img/sub_page/page2-section2_bg.jpg);
+            .backgroundOption;
+            background-position: bottom;
         }
     }
     main.page3{
         section.top_banner{
             background-image: url(../img/sub_page/page3-banner1.jpg);
         }
+        section.section2{
+            height: 620px;
+            background-image: url(../img/sub_page/page3-section2_bg.jpg);
+            .backgroundOption;
+            background-position: bottom;
+        }
     }
     main.page4{
         section.top_banner{
             background-image: url(../img/sub_page/page4-banner1.jpg);
+        }
+        section.section2{
+            height: 440px;
+            background-image: url(../img/sub_page/page4-section2_bg.jpg);
+            .backgroundOption;
+            background-position: bottom;
         }
     }
     main.page5{
