--- a/less/style.less
+++ b/less/style.less
@@ -109,6 +109,7 @@ div#wrap {
                     background-image: url(../img/index_page/slider/slider_btn.png);
                     .backgroundOption;
                     background-size: contain;
+                    z-index: 900;
                 }
                 .bx-next:hover{
                     transform: rotate(360deg);
