--- a/less/common.less
+++ b/less/common.less
@@ -304,7 +304,7 @@ div#wrap{
             position: relative;
             right:0%;
 
-            z-index: 999;
+            z-index: 900;
             div.wrap{
                 line-height: 50px;
                 .wraps;
@@ -369,6 +369,7 @@ div#wrap{
     }
 
     footer{
+        background: white;;
         div.company_list{
             width: 100%;
             height: 90px;
