--- a/less/style_main.less
+++ b/less/style_main.less
@@ -1602,6 +1602,7 @@ body {
                         border-radius: 15px;
                         padding-top: 20px;
                         text-align: center;;
+                        overflow: hidden;
                         
                         img.bedge{
                             float: right;
@@ -1618,6 +1619,7 @@ body {
                         p{
                             font-size: 1rem;
                             color: #444;
+                            margin-bottom: 5px;
                             span{
                                 display: block;;
                                 margin-top: 5px;
@@ -1632,44 +1634,11 @@ body {
                             line-height: 40px;;
                             border:1px solid #d9d9d9;
                             color: #444;
-                        }
-                    }
-                    div.fn_box1{
-                        .fn_icon{
-                            background-image: url(../img/sub_page/company_mz.png);
-                        }
-                    }
-                    div.fn_box2{
-                        .fn_icon{
-                            background-image: url(../img/sub_page/company_hk.png);
-                        }
-                    }
 
-                    div.fn_box3{
-                        .fn_icon{
-                            background-image: url(../img/sub_page/company_hh.png);
                         }
                     }
-                    div.fn_box4{
-                        .fn_icon{
-                            background-image: url(../img/sub_page/company_hd.png);
-                        }
-                    }
-                    div.fn_box5{
-                        .fn_icon{
-                            background-image: url(../img/sub_page/company_db.png);
-                        }
-                    }
-                    div.fn_box6{
-                        .fn_icon{
-                            background-image: url(../img/sub_page/company_mh.png);
-                        }
-                    }
-                    div.fn_box7{
-                        .fn_icon{
-                            background-image: url(../img/sub_page/company_rt.png);
-                        }
-                    }
+                  
+                  
 
 
 
