--- a/css/popup.css
+++ b/css/popup.css
@@ -116,13 +116,27 @@ body {
   border-bottom: 0px;
   background-color: white;
   color: #ec6647;
+  font-weight: bold;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs {
   width: 100%;
   height: 280px;
   margin-top: 20px;
 }
+#wrap div.popups div.speed_compare_popup div.ins_tabs h3 {
+  margin-bottom: 50px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs h3.result_compare {
+  text-align: left;
+  font-weight: bold;
+  font-size: 1.125rem;
+  margin-bottom: 10px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs h4 {
+  text-align: left;
+}
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab {
+  cursor: pointer;
   width: 30%;
   height: 45%;
   background: white;
@@ -132,7 +146,197 @@ body {
   margin-right: 5px;
   margin-left: 5px;
   border-radius: 15px;
-  overflow: hidden;
   padding-top: 25px;
   box-sizing: border-box;
+  position: relative;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab img.bedge {
+  position: absolute;
+  right: -5px;
+  top: -5px;
+  opacity: 0;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab .icon_area {
+  width: 150px;
+  height: 40px;
+  margin: 0px auto;
+  margin-bottom: 10px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab .p {
+  letter-spacing: -1px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab#active {
+  border: 2px solid #ec6647;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab#active img.bedge {
+  display: block;
+  opacity: 1;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord {
+  width: 100%;
+  height: 380px;
+  margin: 30px auto;
+  border-radius: 15px;
+  overflow-y: scroll;
+  float: left;
+  box-sizing: border-box;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap {
+  width: 99%;
+  border: 1.5px solid #ec6647;
+  height: 380px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  margin-left: 5px;
+  overflow: hidden;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs {
+  width: 100%;
+  border-bottom: 1px solid #d0d0d0;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs .left_tab {
+  width: 45%;
+  height: 100%;
+  float: left;
+  box-sizing: border-box;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs .center_tab {
+  width: 10%;
+  height: 100%;
+  background: #f5f5f5;
+  float: left;
+  border-left: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0;
+  box-sizing: border-box;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap .data_tabs .right_tab {
+  width: 45%;
+  height: 100%;
+  float: left;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data {
+  height: 110px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data div.tabs {
+  box-sizing: border-box;
+  padding-left: 20px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data div.tabs div.logo_section {
+  width: 30%;
+  height: 100%;
+  float: left;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position-y: 40%;
+  background-size: 100px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data div.tabs div.text_area {
+  width: 60%;
+  height: 100%;
+  float: left;
+  padding-left: 30px;
+  box-sizing: border-box;
+  padding-top: 25px;
+  text-align: left;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data div.tabs div.text_area h3 {
+  margin-bottom: 10px;
+  color: #222;
+  letter-spacing: -1px;
+  word-break: keep-all;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data div.tabs div.text_area p {
+  color: #222;
+  word-break: keep-all;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data .left_tab {
+  width: 45%;
+  height: 100%;
+  float: left;
+  box-sizing: border-box;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data .center_tab {
+  width: 10%;
+  height: 100%;
+  background: #f5f5f5;
+  float: left;
+  border-left: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  background-image: url(../img/popup/vs_img.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.head_data .right_tab {
+  width: 45%;
+  height: 100%;
+  float: left;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab {
+  width: 100%;
+  height: 150px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .center_tab {
+  position: relative;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .center_tab span {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  transform: translate(0%, -50%);
+  font-size: 0.875rem;
+  color: #444444;
+  font-weight: bold;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs {
+  padding: 15px;
+  box-sizing: border-box;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #d0d0d0;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.null_data {
+  width: 100%;
+  height: 100%;
+  line-height: 100px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row {
+  width: 100%;
+  height: 33.3%;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row b {
+  display: block;
+  width: 33.3%;
+  height: 100%;
+  text-align: center;
+  float: left;
+  line-height: 33.3px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body1 {
+  background-color: #f0f0f0;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body2 {
+  border: 0px;
+}
+#wrap div.popups div.speed_compare_popup div.compare_fn_btn {
+  cursor: pointer;
+  width: 250px;
+  height: 50px;
+  background: #ec6647;
+  margin: 0 auto;
+  margin-top: 200px;
+  border-radius: 50px;
+  line-height: 50px;
+  color: white;
+  font-weight: bold;
 }
