--- a/less/popup.less
+++ b/less/popup.less
@@ -109,13 +109,28 @@ body {
                     border-bottom: 0px;                   
                     background-color: white;;
                     color: @mainColor;
+                    font-weight: bold;;
+                    
                 }
             }
             div.ins_tabs{
                 width: 100%;
                 height: 280px;;
                 margin-top: 20px;;
+                h3{
+                    margin-bottom: 50px;;
+                }
+                h3.result_compare{
+                    text-align: left;
+                    font-weight: bold;;
+                    font-size: 1.125rem;
+                    margin-bottom: 10px;;
+                }
+                h4{
+                    text-align: left;
+                }
                 div.ins_tab{
+                    cursor: pointer;
                     width: 30%;
                     height: 45%;
                     background: white;;
@@ -125,10 +140,215 @@ body {
                     margin-right: 5px;;
                     margin-left: 5px;
                     border-radius: 15px;;
-                    overflow: hidden;
                     padding-top: 25px;
                     box-sizing: border-box;;
+                    position: relative;
+                  
+                    img.bedge{
+                        position: absolute;
+                        right: -5px;
+                        top:-5px;
+                        opacity: 0.0;
+                    }
+                    .icon_area{
+                        width: 150px;
+                        height: 40px;
+                        margin: 0px auto;;
+                        margin-bottom: 10px;
+                        .backgroundOption;
+                        background-size: contain;;
+                    }
+                    .p{
+                        letter-spacing: -1px;
+
+                    }
                 }
+                div.ins_tab#active{
+                    border: 2px solid @mainColor;
+
+                    img.bedge{
+                        display: block;
+                        opacity: 1.0;
+
+
+                    }
+                }
+                div.compare_bord{
+                    width: 100%;
+                    height: 380px;
+                    margin: 30px auto;;
+                    border-radius: 15px;
+                    overflow-y: scroll;
+                    float: left;
+                    box-sizing: border-box;
+                    .bord_wrap{
+                        width: 99%;
+                        border: 1.5px solid #ec6647;
+                        height: 380px;
+                        border-radius: 10px;
+                        box-sizing: border-box;
+                        margin-left: 5px;
+                        overflow: hidden;
+                        .data_tabs{
+                            width: 100%;
+                            border-bottom: 1px solid #d0d0d0;
+                            .left_tab{
+                                width: 45%;
+                                height: 100%;
+                                float: left;
+                                box-sizing: border-box;;
+                           
+                            }
+                            .center_tab{
+                                width: 10%;
+                                height: 100%;
+                                background: #f5f5f5;
+                                float: left;
+                                border-left: 1px solid #d0d0d0;;
+                                border-right: 1px solid #d0d0d0;;
+                                box-sizing: border-box;;
+                              
+                            }
+                            .right_tab{
+                                width: 45%;
+                                height: 100%;
+                                float: left;
+
+                            }
+
+                        }
+                        div.head_data{
+                            height: 110px;
+                            div.tabs{
+                                box-sizing: border-box;
+                                padding-left: 20px;;
+
+                                div.logo_section{
+                                    width: 30%;
+                                    height: 100%;
+                                    float: left;
+                                    .backgroundOption;
+                                    background-position-y: 40%;
+                                    background-size: 100px;
+
+                                }
+                                div.text_area{
+                                    width: 60%;;
+                                    height: 100%;
+                                    float: left;
+                                    padding-left: 30px;;
+                                    box-sizing: border-box;;
+                                    padding-top: 25px;
+                                    text-align: left;
+
+                                    h3{
+                                        margin-bottom: 10px;
+                                        color: #222;
+                                        letter-spacing: -1px;
+                                        word-break: keep-all;
+
+                                    }
+                                    p{
+                                        color: #222;
+                                        word-break: keep-all;
+                                    }
+
+                                }
+                            }
+                            .left_tab{
+                                width: 45%;
+                                height: 100%;
+                                float: left;
+                                box-sizing: border-box;;
+                           
+                            }
+                            .center_tab{
+                                width: 10%;
+                                height: 100%;
+                                background: #f5f5f5;
+                                float: left;
+                                border-left: 1px solid #d0d0d0;;
+                                border-right: 1px solid #d0d0d0;;
+                                box-sizing: border-box;;
+                                background-image: url(../img/popup/vs_img.png);
+                                .backgroundOption;
+                                background-size:50px;
+                            }
+                            .right_tab{
+                                width: 45%;
+                                height: 100%;
+                                float: left;
+
+                            }
+                        }
+                        div.price_tab{
+                            width: 100%;
+                            height: 150px;
+                            .center_tab{
+                                position: relative;
+                                span{
+                                    width: 100%;
+                                    position: absolute;
+                                    top: 50%;
+                                    left: 0px;
+                                    transform: translate(0%,-50%);
+                                    font-size: 0.875rem;
+                                    color: #444444;
+                                    font-weight: bold;;
+
+                                }
+                            }
+                            .tabs{
+                                padding: 15px;
+                                box-sizing: border-box;;
+                                div.price_bord{
+                                    width: 100%;
+                                    height: 100%;
+                                    border:1px solid #d0d0d0;
+                                    div.null_data{
+                                        width: 100%;
+                                        height: 100%;
+                                        line-height: 100px;
+                                    }
+                                    div.row{
+                                        width: 100%;
+                                        height: 33.3%;
+                                        b{
+                                            display: block;
+                                            width: 33.3%;
+                                            height: 100%;
+                                            text-align: center;;
+                                            float: left;
+                                            line-height: 33.3px;
+                                        }
+
+                                    }
+                                    div.tb_body1{
+                                        background-color: #f0f0f0   ;
+                                    }
+                                    div.tb_body2{
+                                        border: 0px;
+                                    }
+
+                                }
+                            }
+                          
+                        }                           
+                  
+                    }
+                }
+            }
+            div.compare_fn_btn{
+                cursor: pointer;
+                width: 250px;
+                height: 50px;
+                background: @mainColor;
+                margin: 0 auto;;
+                margin-top: 200px;
+                border-radius: 50px;
+                line-height: 50px;
+                color: white;
+                font-weight: bold;
             }
         }
     }
