--- a/css/common.css
+++ b/css/common.css
@@ -166,8 +166,8 @@ div#wrap div.scroll_widget {
   width: 80px;
   height: 350px;
   position: absolute;
-  top: 80px;
-  right: 10%;
+  top: 180px;
+  right: 2%;
   z-index: 900;
   border-radius: 80px;
   padding: 5px;
@@ -182,6 +182,11 @@ div#wrap div.scroll_widget {
   animation-timing-function: ease;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
+}
+@media screen and (max-width: 1200px) {
+  div#wrap div.scroll_widget {
+    display: none;
+  }
 }
 @keyframes show {
   0% {
@@ -218,6 +223,7 @@ div#wrap div.scroll_widget ul {
   margin: 0 auto;
 }
 div#wrap div.scroll_widget ul li {
+  cursor: pointer;
   width: 100%;
   height: 40px;
   border-bottom: 1px solid #cecece;
@@ -240,6 +246,7 @@ div#wrap header {
   height: 100%;
   max-width: 1920px;
   margin: 0 auto;
+  background: white;
 }
 div#wrap header div.gnb_line {
   width: 100%;
