--- a/css/popup.css
+++ b/css/popup.css
@@ -124,6 +124,7 @@ body {
   width: 100%;
   height: 280px;
   margin-top: 20px;
+  text-align: left;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs h3 {
   margin-bottom: 50px;
@@ -139,18 +140,18 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab {
   cursor: pointer;
-  width: 30%;
+  width: 32%;
   height: 45%;
   background: white;
-  display: inline-block;
   border: 1px solid #f0f0f0;
+  display: inline-block;
   margin-bottom: 10px;
-  margin-right: 5px;
-  margin-left: 5px;
-  border-radius: 15px;
+  margin-right: 20px;
+  border-radius: 5px;
   padding-top: 25px;
   box-sizing: border-box;
   position: relative;
+  text-align: center;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab img.bedge {
   position: absolute;
@@ -170,6 +171,10 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab .p {
   letter-spacing: -1px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab3,
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab6 {
+  margin-right: 0px;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.ins_tab#active {
   border: 2px solid #ec6647;
@@ -210,6 +215,7 @@ body {
   float: left;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.caption div.back_btn {
+  cursor: pointer;
   width: 220px;
   height: 50px;
   background: #3c5271;
@@ -225,17 +231,19 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.tables {
   height: 708px;
-  box-sizing: border-box;
   border: 1.5px solid #ec6647;
-  border-radius: 10px;
-  transform: translateY(75px);
+  border-radius: 5px;
+  transform: translateY(5px);
   box-sizing: inherit;
   position: relative;
   z-index: 90;
+  text-align: center;
+  overflow: hidden;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.data_tabs {
   width: 100%;
   border-bottom: 1px solid #d0d0d0;
+  margin-top: 1px;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.data_tabs .left_tab {
   width: 45%;
@@ -343,6 +351,7 @@ body {
   width: 100%;
   height: 100%;
   border: 1px solid #d0d0d0;
+  overflow: hidden;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.null_data {
   width: 100%;
@@ -393,7 +402,7 @@ body {
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.row div.colum_body .woman_mark {
   background: #ff449c;
 }
-#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body1 {
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body1 .colum {
   background-color: #f0f0f0;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.price_tab .tabs div.price_bord div.tb_body1 div {
@@ -577,7 +586,7 @@ body {
   float: left;
   padding: 20px;
   text-align: left;
-  border-radius: 15px;
+  border-radius: 5px;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.user_info h3 {
   font-size: 1.125rem;
@@ -599,7 +608,7 @@ body {
   float: left;
   margin-right: 2%;
   padding: 20px;
-  border-radius: 15px;
+  border-radius: 5px;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.place_info h3 {
   font-size: 1.125rem;
@@ -638,15 +647,171 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.btn_area {
   width: 22%;
-  height: 48%;
-  background: #3c5271;
+  height: 100%;
   box-sizing: border-box;
   font-weight: bold;
   letter-spacing: -1px;
   float: left;
-  border-radius: 10px;
   line-height: calc(135px*0.48);
   color: white;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.btn_area div {
+  cursor: pointer;
+  width: 100%;
+  height: 60px;
+  margin-bottom: 10px;
+  background: #3c5271;
+  border-radius: 5px;
+  color: white;
+  letter-spacing: -1px;
+  text-align: center;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.btn_area div img {
+  vertical-align: middle;
+  margin-left: 5px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_top_tab div.btn_area div.insert_consult {
+  background: #ec6647;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab {
+  width: 100%;
+  height: 420px;
+  margin: 20px auto;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left {
+  width: 20%;
+  float: left;
+  height: 100%;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.service_center_phone {
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+  border: 1px solid #d0d0d0;
+  text-align: left;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.service_center_phone p {
+  color: #222;
+  font-weight: bold;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.service_center_phone h3 {
+  font-family: 'Roboto';
+  color: #222;
+  font-size: 1.775rem;
+  letter-spacing: -3px;
+  margin-top: 15px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner {
+  width: 100%;
+  height: 300px;
+  border-radius: 5px;
+  border: 1px solid #d0d0d0;
+  padding-top: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: relative;
+  box-sizing: border-box;
+  background: #f76069;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #f76069 0%, #ff8c55 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #f76069 0%, #ff8c55 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #f76069 0%, #ff8c55 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f76069', endColorstr='#ff8c55', GradientType=0);
+  /* IE6-9 */
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner h3,
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner h4,
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner p {
+  color: white;
+  margin: 0;
+  text-align: left;
+  letter-spacing: -1.5px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner h3 {
+  font-size: 1.125rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner h4 {
+  font-size: 0.875rem;
+  margin-bottom: 20px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner p {
+  font-size: 0.775rem;
+  margin-bottom: 10px;
+  letter-spacing: -0.5px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_left div.cal-banner img {
+  position: absolute;
+  right: 5px;
+  bottom: 0px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right {
+  width: 78%;
+  height: 100%;
+  float: right;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right div.ins_info_tab {
+  width: 100%;
+  height: 370px;
+  border-radius: 5px;
+  padding: 20px;
+  border: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  text-align: left;
+  margin-bottom: 15px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right div.ins_info_tab h3 {
+  font-weight: bold;
+  color: #222;
+  margin-bottom: 20px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right div.ins_info_tab ul {
+  width: 100%;
+  height: 280px;
+  border: 1px solid #d0d0d0;
+  border-bottom: 0px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right div.ins_info_tab ul li {
+  height: 40px;
+  border-bottom: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  line-height: 40px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right div.ins_info_tab ul li div.list_head {
+  height: 100%;
+  background: #f6f6f6;
+  width: 120px;
+  float: left;
+  border-right: 1px solid #d0d0d0;
+  box-sizing: border-box;
+  font-weight: bold;
+  color: #222;
+  padding-left: 10px;
+  font-size: 0.875rem;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right div.ins_info_tab ul li div.list_desc {
+  height: 100%;
+  float: left;
+  color: #444;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 0.875rem;
+  overflow: hidden;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.cal_bottom_tab div.bottom_right p.cal_mention {
+  color: #ec6647;
+  font-size: 0.875rem;
+  margin-bottom: 5px;
+  text-align: left;
+  letter-spacing: -1px;
+  padding-left: 5px;
 }
 #wrap div.popups div.speed_compare_popup div.compare_fn_btn {
   cursor: pointer;
@@ -659,6 +824,7 @@ body {
   line-height: 50px;
   color: white;
   font-weight: bold;
+  text-align: center;
 }
 #wrap div.popups div.speed_compare_popup div.cal_fn_btn {
   cursor: pointer;
@@ -670,4 +836,131 @@ body {
   line-height: 50px;
   color: white;
   font-weight: bold;
+  text-align: center;
+}
+#wrap div.insert_popup {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+#wrap div.insert_popup div.insert_box {
+  width: 740px;
+  height: 630px;
+  background: white;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+}
+#wrap div.insert_popup div.insert_box span.xbox {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  display: block;
+  background-image: url(../img/popup/x_btn.png);
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+#wrap div.insert_popup div.insert_box h2 {
+  font-size: 1.875rem;
+  color: #222;
+  font-weight: bold;
+  letter-spacing: -2px;
+  text-align: center;
+}
+#wrap div.insert_popup div.insert_box div.insert_form {
+  width: 100%;
+  height: 410px;
+  margin-top: 35px;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.row {
+  width: 100%;
+  height: 75px;
+  margin-bottom: 30px;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.row div.colums {
+  width: 50%;
+  height: 100%;
+  float: left;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.row p {
+  height: 15px;
+  font-size: 0.875rem;
+  margin-bottom: 5px;
+  color: #222;
+  font-weight: bold;
+  padding-left: 5px;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.top_tab input[type=text] {
+  width: 95%;
+  height: 55px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  border: 2px solid #d9d9d9;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.top_tab select {
+  width: 30%;
+  height: 55px;
+  border: 2px solid #d9d9d9;
+  box-sizing: border-box;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.top_tab input[type=number] {
+  width: 67%;
+  height: 55px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  border: 2px solid #d9d9d9;
+  float: right;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab select {
+  width: 95%;
+  height: 55px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  border: 2px solid #d9d9d9;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab input[type=date] {
+  width: 49%;
+  height: 55px;
+  border: 2px solid #d9d9d9;
+  box-sizing: border-box;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab .colum-2 select {
+  width: 49%;
+  height: 55px;
+  box-sizing: border-box;
+  float: right;
+  padding-left: 20px;
+  border: 2px solid #d9d9d9;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.bottom_tab {
+  height: 170px;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.bottom_tab textarea {
+  height: 150px;
+  width: 100%;
+  box-sizing: border-box;
+  padding-left: 20px;
+  border: 2px solid #d9d9d9;
+  resize: none;
+  margin-top: 10px;
+}
+#wrap div.insert_popup div.insert_box div.sub_btn {
+  cursor: pointer;
+  width: 250px;
+  height: 50px;
+  background: #ec6647;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  font-size: 1.125rem;
+  color: white;
+  border-radius: 100px;
+  margin: 50px auto;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
 }
