--- a/css/common.css
+++ b/css/common.css
@@ -115,6 +115,21 @@ blockquote,
 q {
   quotes: none;
 }
+input,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+}
+select::-ms-expand {
+  display: none;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 blockquote:before,
 blockquote:after,
 q:before,
