--- a/css/popup.css
+++ b/css/popup.css
@@ -469,7 +469,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center  ;
+  text-align: center;
   color: #666;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.compare_bord .bord_wrap div.bottom_data .left_tab {
@@ -523,6 +523,14 @@ body {
   border-top: 1px solid #d0d0d0;
   text-align: center;
 }
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms select {
+  background-image: url(../img/popup/select_bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14PX;
+  background-position-x: 95%;
+}
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box {
   margin-top: 20px;
   width: 30%;
@@ -534,21 +542,31 @@ body {
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box input,
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box select {
+  padding-left: 10px;
   box-sizing: border-box;
   border: 2px solid #d0d0d0;
   outline: none;
   box-shadow: none;
-  padding: 0px;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box input:focus,
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms div.input_box select:focus {
+  border: 2px solid #ec6647;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .name_box input {
   width: 100%;
   height: 100%;
   outline: none;
 }
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .name_box input:focus {
+  border: 2px solid #ec6647;
+}
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .info_box select {
   width: 30%;
   height: 100%;
   outline: none;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .info_box select:focus {
+  border: 2px solid #ec6647;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .info_box input {
   width: 68%;
@@ -556,16 +574,25 @@ body {
   outline: none;
   float: right;
 }
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .info_box input:focus {
+  border: 2px solid #ec6647;
+}
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .phone_box select {
   width: 30%;
   height: 100%;
   outline: none;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .phone_box select:focus {
+  border: 2px solid #ec6647;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .phone_box input {
   width: 68%;
   height: 100%;
   outline: none;
   float: right;
+}
+#wrap div.popups div.speed_compare_popup div.ins_tabs div.forms .phone_box input:focus {
+  border: 2px solid #ec6647;
 }
 #wrap div.popups div.speed_compare_popup div.ins_tabs div.forms label.container {
   width: 250px;
@@ -901,13 +928,26 @@ body {
   padding-left: 20px;
   border: 2px solid #d9d9d9;
 }
+#wrap div.insert_popup div.insert_box div.insert_form div.top_tab input[type=text]:focus {
+  border: 2px solid #ec6647;
+}
 #wrap div.insert_popup div.insert_box div.insert_form div.top_tab select {
   width: 30%;
   height: 55px;
   border: 2px solid #d9d9d9;
   box-sizing: border-box;
+  padding-left: 20px;
+  background-image: url(../img/popup/select_bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14PX;
+  background-position-x: 95%;
 }
-#wrap div.insert_popup div.insert_box div.insert_form div.top_tab input[type=number] {
+#wrap div.insert_popup div.insert_box div.insert_form div.top_tab select:focus {
+  border: 2px solid #ec6647;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.top_tab input.number {
   width: 67%;
   height: 55px;
   box-sizing: border-box;
@@ -915,18 +955,42 @@ body {
   border: 2px solid #d9d9d9;
   float: right;
 }
+#wrap div.insert_popup div.insert_box div.insert_form div.top_tab input.number:focus {
+  border: 2px solid #ec6647;
+}
 #wrap div.insert_popup div.insert_box div.insert_form div.middle_tab select {
   width: 95%;
   height: 55px;
   box-sizing: border-box;
   padding-left: 20px;
   border: 2px solid #d9d9d9;
+  background-image: url(../img/popup/select_bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14PX;
+  background-position-x: 95%;
 }
-#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab input[type=date] {
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab select:focus {
+  border: 2px solid #ec6647;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab input.date {
   width: 49%;
   height: 55px;
   border: 2px solid #d9d9d9;
   box-sizing: border-box;
+  padding-left: 20px;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab input.date:focus {
+  border: 2px solid #ec6647;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab span.date_btn {
+  position: absolute;
+  right: 53%;
+  top: 50%;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab .colum-2 {
+  position: relative;
 }
 #wrap div.insert_popup div.insert_box div.insert_form div.middle_tab .colum-2 select {
   width: 49%;
@@ -935,6 +999,9 @@ body {
   float: right;
   padding-left: 20px;
   border: 2px solid #d9d9d9;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.middle_tab .colum-2 select:focus {
+  border: 2px solid #ec6647;
 }
 #wrap div.insert_popup div.insert_box div.insert_form div.bottom_tab {
   height: 170px;
@@ -947,6 +1014,9 @@ body {
   border: 2px solid #d9d9d9;
   resize: none;
   margin-top: 10px;
+}
+#wrap div.insert_popup div.insert_box div.insert_form div.bottom_tab textarea:focus {
+  border: 2px solid #ec6647;
 }
 #wrap div.insert_popup div.insert_box div.sub_btn {
   cursor: pointer;
@@ -963,4 +1033,15 @@ body {
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+}
+input[type=text]:focus {
+  outline: none;
+  border: 2px solid #ec6647;
+}
+select:focus {
+  outline: none;
+}
+input[type=number]:focus {
+  outline: none;
+  border: 2px solid #ec6647;
 }
