--- a/less/common.less
+++ b/less/common.less
@@ -120,6 +120,25 @@ q {
     quotes: none;
 }
 
+
+
+input,select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    
+}
+select::-ms-expand { display:none; }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+
 blockquote:before,
 blockquote:after,
 q:before,
